//
//  Tab.swift
//  karma
//
//  Created by Giovanni Demasi on 06/01/23.
//

import SwiftUI

// Tab's
// Raw value is the asset image name
enum Tab: String, CaseIterable {
    case home = "house"
    case search = "magnifyingglass"
//    case post = "plus"
    case bookmarks = "bookmark"
    case profile = "person"
}
