...
                if viewModel.user.id == authViewModel.currentUser?.id {
                    ToolbarItem(placement: ToolbarItemPlacement.navigationBarTrailing) {
                        Menu {
                            NavigationLink {
                                EditProfileView(user: viewModel.user)
                            } label: {
                                Label("Edit profile", systemImage: "pencil")
                            }
                            
                            Button(
                                role: .destructive,
                                action: {
                                    authViewModel.signOut()
                                }, label: {
                                    Label("Sign out", systemImage: "rectangle.portrait.and.arrow.right")
                                }
                            )
                            
                        } label: {
                            Label (
                                title: { Text("Add") },
                                icon: { Image(systemName: "ellipsis") }
                            )
                        }
                        
                    }
                }
...
